--- a/assignmet/src/vercel.json
+++ b/assignmet/src/vercel.json
@@ -1,18 +1,7 @@
 {
     "routes":[
-        {
-           "src":"/",
-           "dest":"/"
-        },
-        {
-            "src":"/Status",
-           "dest":"/"
-        },
-
-        {
-            "src":"/Online",
-            "dest":"/"
-        }
-
+        { "src":"/", "dest":"/" },
+        { "src":"/Status", "dest":"/Status" },
+        { "src":"/Online", "dest":"/Online" }
     ]
 }
