--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,7 +1,10 @@
 {
   "version":2,
-  "build":[
-    {"src":".js","use":"@vercel/node"}
+  "builds":[
+    {
+      "src":"./index.js",
+      "use":"@vercel/node"
+    }
   ],
   "routes":[
     {
